# cb-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  license.txt  pyproject.toml
case_data/: PM_Case_User_Master.csv
cb_maintenance/: hooks.py  install.py  modules.txt
cb_maintenance/api/: permission.py
cb_maintenance/fixtures/: notification.json  print_format.json
cb_maintenance/maintenance_ops/doctype/cb_asset_type/: cb_asset_type.js  cb_asset_type.json  cb_asset_type.py
cb_maintenance/maintenance_ops/doctype/cb_issue_type/: cb_issue_type.js  cb_issue_type.json  cb_issue_type.py
cb_maintenance/maintenance_ops/doctype/cb_maintenance_team_member/: cb_maintenance_team_member.js  cb_maintenance_team_member.json  cb_maintenance_team_member.py
cb_maintenance/maintenance_ops/doctype/cb_maintenance_ticket/: cb_maintenance_ticket.js  cb_maintenance_ticket.json  cb_maintenance_ticket.py  cb_maintenance_ticket_list.js
cb_maintenance/maintenance_ops/doctype/cb_outlet/: cb_outlet.js  cb_outlet.json  cb_outlet.py
cb_maintenance/maintenance_ops/doctype/cb_pm_program/: cb_pm_program.js  cb_pm_program.json  cb_pm_program.py
cb_maintenance/maintenance_ops/doctype/cb_pm_program_task/: cb_pm_program_task.json  cb_pm_program_task.py
cb_maintenance/maintenance_ops/doctype/cb_pm_task/: cb_pm_task.js  cb_pm_task.json  cb_pm_task.py  (+1 more)
cb_maintenance/maintenance_ops/setup/: import_case_data.py
cb_maintenance/maintenance_ops/utils/: __init__.py  pm_scheduler.py
cb_maintenance/public/css/: maintenance_ops.css
scripts/: run_local.sh
(+14 files in other folders)
